# capnproto-js

./: .dir-locals.el  LICENSE  README.md
c++/: Makefile.am  configure.ac  setup-autotools.sh
c++/src/capnp/compiler/: capnpc-js.c++
javascript/: build-tests.sh  run-tests.sh
javascript/lib/: capnp_arena.js  capnp_blob.js  capnp_common.js  capnp_genhelper.js  capnp_layout.js  capnp_list.js  capnp_message.js  capnp_orphan.js  capnp_prim.js  capnp_runtime.js  capnp_serialize.js  capnp_serialize_packed.js  kj_common.js  kj_io.js
javascript/tests/: all_tests.html  encoding-test.js  interop-tests.js  layout-test.js  orphan-test.js  serialize-packed-tests.js  serialize-test.js  stringify-test.js  test-util.js
